User configurable columns in Qt playlist
The user configurable columns menu shouldn't be attached to playlist items but to the playlist header (that's how all the other applications with customizable columns do it).
The user configurable columns menu shouldn't be attached to playlist items but to the playlist header (that's how all the other applications with customizable columns do it).
This is mainly done. the segfault on quitting vlc should be taken cared of.
added Status::fixed label
closed
VideoLAN code repository instance