Qt4 - Right click on the header on the QTreeView for the playlist enables you to choose the columns you want to be shown. This removes also the code that was in the Model part since this is View Related. Ref #1282 (almost done). There is still segfaults on close of VLC after that menu is triggered.